--- a/index.css
+++ b/index.css
@@ -161,7 +161,7 @@ p {
 }
 
 .service-card {
-    background: #91dce4;
+    background: #4a24a4;
     padding: 20px;
     border-radius: 10px;
     width: 30%;
